--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,30 @@
+* {
+  margin: 0;
+}
+
 #index {
   background:url(https://img3.stockfresh.com/files/s/sanjanovakovic/m/70/4854848_stock-vector-vintage-background-for-cooking-recipes-1.jpg);
 }
 
 .index {
+  display: block;
   font-family: 'Open Sans', sans-serif;
-  padding: 10px;
-  margin: 15% 25% 25% 25%;
-  bottom: 500px;
+  margin: 25%;
+  bottom: 400px;
   font-size: 20px;
-  border-radius: 10%;
-}
-
-.enlace {
-  font-size: 20px;
-  margin: 0 auto;
 }
 
 .title-principal {
   color: rgb(0, 0, 0);
-  width: 40%;
-  margin: auto;
+  width: 100%;
+  text-align: center;
+  display: inline-block;
+}
+
+
+
+.enlace a {
+  text-decoration: none;
 }
 
 /*Pag Zucchini*/
@@ -81,7 +86,7 @@
   margin-left: 25px;
 }
 
-ul li {
+.frosting_parts, .ingredients_parts {
   font-size: 17px;
   background-color: rgba(255, 255, 255, 0.8);
   width: 50%;
